Fixed sidebar navigation mobile issue

--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -17,6 +17,11 @@ body{
     padding:100px;
 }
 
+.typed-row{
+    position: relative;
+    top:10vh !important;
+}
+
 .sidenav {
     height: 100%;
     width: 200px;
@@ -26,7 +31,6 @@ body{
     left: 0;
     background-color: #111;
     overflow-x: hidden;
-    
     transition: 0.5s; 
 }
 
@@ -79,7 +83,7 @@ h2{
 .custom-nav-drawer{
     padding: 0px 10px 0px 10px;
     position: fixed;
-background:white;
+    background:white;
 }
 
 @media screen and (max-height: 450px) {
@@ -87,6 +91,15 @@ background:white;
     .sidenav a {font-size: 18px;}
 }
 
-@media screen and (max-width: 450px) {
+@media screen and (max-width: 600px) {
     .p6{padding:0px;}
+
+    .sidenav {
+        width: 0px;
+
+    }
+    .main {
+        margin-left: 0px;
+
+    }
 }
